--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
             <a href="login.html" id="login-link">登录</a>
             <a href="register.html" id="register-link">注册</a>
             <a href="cart.html" id="cart-link" style="display:none;">购物车</a>
-            <a href="products.html" id="admin-link" style="display:none;">产品管理</a> <!-- 默认隐藏 -->
+            <a href="products.html" id="admin-link" style="display:none;">产品管理</a> 
         </nav>
         <div id="username"></div> <!-- 显示用户名 -->
         <button id="logout-button" onclick="logout()" style="display:none;">注销</button> <!-- 默认隐藏 -->
@@ -27,8 +27,8 @@
 
     <!-- Main Content -->
     <section id="main-content">
-        <h2>欢迎光临我们的在线商店！</h2>
-        <p>浏览我们的精选商品并开始购物！</p>
+        <h2>欢迎光临在线商店！</h2>
+        <p>浏览精选商品并开始购物！</p>
 
         <!-- 产品列表 -->
         <div id="product-list">
