--- a/public/login.html
+++ b/public/login.html
@@ -50,7 +50,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 在线商店. 版权所有</p>
+            <p>&copy; 2024 牧燕小站</p>
         </div>
     </footer>
 
