--- a/public/orderDetails.html
+++ b/public/orderDetails.html
@@ -52,7 +52,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 在线商店. 版权所有</p>
+        <p>&copy; 2024 牧燕小站</p>
     </footer>
 
     <script src="js/orderDetails.js"></script>
