--- a/public/orderManagement.html
+++ b/public/orderManagement.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>订单管理 - 销售管理</title>
+    <link rel="stylesheet" href="css/variables.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="css/animations.css">
 </head>
 
 <body>
@@ -39,10 +43,9 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 在线商店. 版权所有</p>
+        <p>&copy; 2024 牧燕小站</p>
     </footer>
 
     <script src="js/orderManagement.js"></script>
 </body>
-
 </html>
