--- a/public/register.html
+++ b/public/register.html
@@ -49,7 +49,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 在线商店. 版权所有</p>
+        <p>&copy; 2024 牧燕小站</p>
     </footer>
 
     <script src="js/auth.js"></script>
