添加搜索和按类别筛选，优化UI

--- a/public/productList.html
+++ b/public/productList.html
@@ -20,9 +20,13 @@
 
     <!-- Search Section -->
     <section id="search-section">
-        <h2>搜索产品</h2>
-        <input type="text" id="search-input" placeholder="请输入产品名称进行搜索">
-        <button id="search-button">搜索</button>
+        <div class="search-container">
+            <input type="text" id="search-input" placeholder="按商品名称搜索...">
+            <button id="search-button">搜索</button>
+        </div>
+        <div class="filter-options">
+            <!-- 过滤选项不变 -->
+        </div>
     </section>
 
     <!-- Product List Section -->
