--- a/public/productDetails.html
+++ b/public/productDetails.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>产品详情 - 在线商店</title>
+    <link rel="stylesheet" href="css/variables.css">
+    <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/productDetails.css">
 </head>
 
@@ -13,25 +15,44 @@
     <header>
         <h1>在线商店</h1>
         <nav>
-            <a href="productList.html">返回产品列表</a>
-            <a href="cart.html">购物车</a>
+            <a href="index.html">首页</a>
+            <a href="productList.html">产品列表</a>
+            <a href="cart.html" id="cart-link">购物车</a>
+            <a href="login.html" id="login-link">登录</a>
+            <a href="register.html" id="register-link">注册</a>
+            <a href="admin.html" id="admin-link" style="display:none;">管理</a>
         </nav>
+        <div id="username"></div>
+        <button id="logout-button" style="display:none;">注销</button>
     </header>
 
     <!-- Product Details Section -->
     <section id="product-details">
-        <h2>产品详情</h2>
         <div id="product-info">
             <!-- 产品信息将在这里动态加载 -->
+            <p>加载中...</p>
         </div>
-        <button id="add-to-cart" onclick="addToCart()">加入购物车</button>
+        
+        <div class="action-buttons">
+            <button id="add-to-cart">加入购物车</button>
+            <button id="back-button" onclick="history.back()">返回上一页</button>
+        </div>
+    </section>
+
+    <!-- Related Products -->
+    <section id="related-products">
+        <h2>相关推荐</h2>
+        <div id="related-products-container">
+            <!-- 相关产品将在这里动态加载 -->
+        </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 牧燕小站</p>
+        <p>&copy; 2025 在线商店</p>
     </footer>
 
+    <script src="js/auth.js"></script>
     <script src="js/product.js"></script>
 </body>
 
