--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="css/header-fix.css">
 </head>
 
 <body>
