--- a/public/login.html
+++ b/public/login.html
@@ -12,23 +12,21 @@
 <body>
     <!-- Header -->
     <header>
-        <div class="container">
-            <h1>在线商店</h1>
-            <nav>
-                <a href="register.html">注册新账户</a>
-                <a href="index.html">返回首页</a>
-            </nav>
-        </div>
+        <h1>在线商店</h1>
+        <nav>
+            <a href="register.html">注册新账户</a>
+            <a href="index.html">返回首页</a>
+        </nav>
     </header>
 
     <!-- Login Section -->
-    <section id="login-form" class="form-section">
-        <div class="container">
+    <section class="form-section">
+        <div class="form-container">
             <h2>登录</h2>
-            <form id="login-form" onsubmit="loginUser(event)" class="form-container">
+            <form id="login-form" onsubmit="loginUser(event)">
                 <div class="input-group">
                     <label for="email">邮箱</label>
-                    <input type="email" id="email"  placeholder="请输入您的邮箱" required>
+                    <input type="email" id="email" placeholder="请输入您的邮箱" required>
                 </div>
                 <div class="input-group">
                     <label for="password">密码</label>
@@ -38,20 +36,23 @@
             </form>
 
             <!-- 错误信息 -->
-            <p id="error-message" class="error-message" style="display: none;">邮箱或密码错误</p>
+            <div id="error-message" class="error-message" style="display: none;">邮箱或密码错误</div>
 
             <!-- 加载指示器 -->
             <div id="loading-indicator" class="loading-indicator" style="display: none;">
-                <div class="spinner"></div> 正在加载...
+                <div class="spinner"></div>
+                <span>正在加载...</span>
+            </div>
+            
+            <div class="extra-links">
+                <a href="register.html">注册新账户</a>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <div class="container">
-            <p>&copy; 2024 牧燕小站</p>
-        </div>
+        <p>&copy; 2024 在线商店</p>
     </footer>
 
     <!-- External JavaScript -->
