--- a/public/productSalesMonitor.html
+++ b/public/productSalesMonitor.html
@@ -76,6 +76,9 @@
         <p>&copy; 2024 牧燕小站</p>
     </footer>
 
+    <!-- 引入通用工具库 -->
+    <script src="js/salesUtils.js"></script>
+    <!-- 引入页面特定脚本 -->
     <script src="js/productSalesMonitor.js"></script>
 </body>
 </html>
