--- a/public/salesReport.html
+++ b/public/salesReport.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="css/animations.css">
+    <!-- 引入Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
@@ -65,6 +67,9 @@
         <p>&copy; 2024 牧燕小站</p>
     </footer>
 
+    <!-- 引入通用工具库 -->
+    <script src="js/salesUtils.js"></script>
+    <!-- 引入页面特定脚本 -->
     <script src="js/salesReport.js"></script>
 </body>
 
