精简代码暂存

--- a/public/customerActivityLogs.html
+++ b/public/customerActivityLogs.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="css/unified-dashboard.css">
     <link rel="stylesheet" href="css/animations.css">
     <style>
         .filter-section {
@@ -161,7 +161,7 @@
     <header>
         <h1>客户活动日志</h1>
         <nav>
-            <a href="salesDashboard.html">返回管理面板</a>
+            <a href="dashboard.html">返回管理面板</a>
             <a href="index.html">首页</a>
         </nav>
     </header>
