--- a/public/orderDetails.html
+++ b/public/orderDetails.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>订单详情 - 在线商店</title>
+    <link rel="stylesheet" href="css/variables.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/order-common.css">
     <link rel="stylesheet" href="css/order.css">
 </head>
 
