--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             <a href="login.html" id="login-link">登录</a>
             <a href="register.html" id="register-link">注册</a>
             <a href="cart.html" id="cart-link" style="display:none;">购物车</a>
-            <a href="salesDashboard.html" id="admin-link" style="display:none;">销售管理</a> 
+            <a href="dashboard.html" id="admin-link" style="display:none;">销售管理</a> 
         </nav>
         <div id="username"></div> <!-- 显示用户名 -->
         <button id="logout-button" onclick="logout()" style="display:none;">注销</button> <!-- 默认隐藏 -->
