--- a/public/orderHistory.html
+++ b/public/orderHistory.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="css/order-common.css">
     <link rel="stylesheet" href="css/orderHistory.css">
 </head>
 
