--- a/public/orderManagement.html
+++ b/public/orderManagement.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="css/unified-dashboard.css">
     <link rel="stylesheet" href="css/animations.css">
 </head>
 
@@ -17,7 +17,7 @@
     <header>
         <h1>订单管理</h1>
         <nav>
-            <a href="salesDashboard.html">返回管理面板</a>
+            <a href="dashboard.html">返回管理面板</a>
             <a href="index.html">首页</a>
         </nav>
     </header>
