--- a/public/salesStaffManagement.html
+++ b/public/salesStaffManagement.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="css/unified-dashboard.css">
     <link rel="stylesheet" href="css/animations.css">
 </head>
 
@@ -16,7 +16,7 @@
     <header>
         <h1>销售人员管理</h1>
         <nav>
-            <a href="adminDashboard.html">返回管理面板</a>
+            <a href="dashboard.html">返回管理面板</a>
             <a href="index.html">首页</a>
         </nav>
     </header>
