销售人员功能暂存

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -74,7 +74,7 @@
             <ul>
                 <li><a href="salesStaffManagement.html">销售人员管理</a></li>
                 <li><a href="orderManagement.html">订单管理</a></li>
-                <li><a href="productManagement.html">商品管理</a></li>
+                <li><a href="productCategoryManagement.html">商品与类别管理</a></li>
                 <li><a href="customerManagement.html">客户管理</a></li>
                 <li><a href="reports.html">销售报表</a></li>
                 <li><a href="systemLogs.html">系统日志</a></li>
@@ -96,7 +96,7 @@
                     <div class="card-icon">📦</div>
                     <div class="card-title">商品管理</div>
                     <div class="card-description">管理您负责的商品信息、价格和库存</div>
-                    <a href="productManagement.html" class="card-link">管理商品</a>
+                    <a href="productCategoryManagement.html" class="card-link">管理商品</a>
                 </div>
                 
                 <div class="dashboard-card">
@@ -110,7 +110,7 @@
                     <div class="card-icon">📁</div>
                     <div class="card-title">商品目录管理</div>
                     <div class="card-description">管理商品类别和分类目录</div>
-                    <a href="categoryManagement.html" class="card-link">管理目录</a>
+                    <a href="productCategoryManagement.html" class="card-link">管理目录</a>
                 </div>
                 
                 <div class="dashboard-card">
